chore(dev): continue production stage

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,8 +37,6 @@ params {
 
   cerebroConfig {
     
-    cipherTaxonomy                        = "$params.databaseDirectory"       // ncbi nodes format
-
     qualityControlBackgroundOnly          = false
     qualityControlDeduplicateBefore       = true
     qualityControlInternalControlsBefore  = true
@@ -180,63 +178,61 @@ params {
       signatureReferences            = "two_gene_signature.fasta"
       
     }
-
   }
 
   panviralEnrichment {            
 
-    virusAligner                      = "minimap2"
-    virusIndex                        = "$params.databaseDirectory/ictv.fasta"
-    virusReference                    = "$params.databaseDirectory/ictv.fasta"
-
-    vircovArgs                        = "--consensus-min-depth 3 --min-depth-coverage 1 --annotation-preset ictv"
+    virusAligner                      = "bowtie2"
+    virusIndex                        = "$params.databaseDirectory/ictv/vircov/ictv"
+    virusReference                    = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
+    vircovArgs                        = "--remap-exclude-bins 'Homo sapiens' --annotation-preset default"
 
   }
 
-  bacterialEnrichment {            
+  // bacterialEnrichment {            
 
-    panelAligner                      = "minimap2"
-    panelIndex                        = "$params.databaseDirectory/ngono_amr.fasta"
-    panelExtraction                   = true  // extract aligned reads from background before further processing
+  //   panelAligner                      = "minimap2"
+  //   panelIndex                        = "$params.databaseDirectory/ngono_amr.fasta"
+  //   panelExtraction                   = true  // extract aligned reads from background before further processing
 
-    assembly                          = true
-    assemblyMethod                    = "shovill-skesa"
-    assemblyChecks                    = "checkm2"
+  //   assembly                          = true
+  //   assemblyMethod                    = "shovill-skesa"
+  //   assemblyChecks                    = "checkm2"
     
-    assemblyAnnotation                = true
-    assemblyAnnotationMethod          = "bakta"
+  //   assemblyAnnotation                = true
+  //   assemblyAnnotationMethod          = "bakta"
     
-    assemblyMlst                      = true 
-    assemblyMlstMethod                = "mlst"
+  //   assemblyMlst                      = true 
+  //   assemblyMlstMethod                = "mlst"
 
-    assemblyAmr                       = true
-    assemblyAmrMethod                 = "ng-star abrit-amr"
-    assemblyAmrIndex                  = "$params.databaseDirectory/ngono_ngstar.fasta"
-    assemblyAmrSpecies                = "Neisseria gonorrhea"
+  //   assemblyAmr                       = true
+  //   assemblyAmrMethod                 = "ng-star abrit-amr"
+  //   assemblyAmrIndex                  = "$params.databaseDirectory/ngono_ngstar.fasta"
+  //   assemblyAmrSpecies                = "Neisseria gonorrhea"
 
-    assemblyMgeContig                 = true
-    assemblyMgeScan                   = true
-    assemblyMgeScanWindow             = 2000
-    assemblyMgeMethod                 = "genomad"
-    assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
+  //   assemblyMgeContig                 = true
+  //   assemblyMgeScan                   = true
+  //   assemblyMgeScanWindow             = 2000
+  //   assemblyMgeMethod                 = "genomad"
+  //   assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
 
-  }
+  // }
 
-  cultureIdentification {
+  // cultureIdentification {
 
-    speciesTyping  {
+  //   speciesTyping  {
 
-      genomeAssembly                  = true  
-      hybridAssembly                  = true         
-      genomeAssembler                 = "hybracter"  // dragonflye, hybracter, shovill
+  //     genomeAssembly                  = true  
+  //     hybridAssembly                  = true         
+  //     genomeAssembler                 = "hybracter"  // dragonflye, hybracter, shovill
 
-      gtdbtkDatabase                  = "$params.databaseDirectory/gtdb"
-      gtdbtkClassify                  = true
-      gtdbtkDenovo                    = true
-      gtdbtkDenovoOutgroup            = "p__Mycobacteria"
+  //     gtdbtkDatabase                  = "$params.databaseDirectory/gtdb"
+  //     gtdbtkClassify                  = true
+  //     gtdbtkDenovo                    = true
+  //     gtdbtkDenovoOutgroup            = "p__Mycobacteria"
 
-    }
-  }
+  //   }
+  // }
 
   resources {
     threads {
@@ -305,11 +301,16 @@ profiles {
     conda.useMamba = true
   }
 
-  twist {
+  panviral {
     params.qualityControl.readDeduplication   = false  
     params.qualityControl.internalControls    = false 
     params.qualityControl.syntheticControls   = false 
     params.qualityControl.backgroundDepletion = false 
+
+    params.panviralEnrichment.virusAligner     = "bowtie2"
+    params.panviralEnrichment.virusIndex       = "$params.databaseDirectory/ictv/vircov/ictv"
+    params.panviralEnrichment.virusReference   = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
+    params.panviralEnrichment.vircovArgs       = "--remap-exclude-bins 'Homo sapiens'"
   }
 
   cns {
@@ -354,16 +355,16 @@ profiles {
 
   }
 
-  bg {
-    params.cerebroConfig.processQcBackgroundOnly         = true
-    params.qualityControl.syntheticControls              = false
-    params.qualityControl.internalControls               = false
-    params.qualityControl.hostDepletion                  = false
-    params.qualityControl.backgroundDepletion            = true
-    params.qualityControl.backgroundDepletionAligner     = "bowtie2"
-    params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
-    params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
-  }
+  // bg {
+  //   params.cerebroConfig.processQcBackgroundOnly         = true
+  //   params.qualityControl.syntheticControls              = false
+  //   params.qualityControl.internalControls               = false
+  //   params.qualityControl.hostDepletion                  = false
+  //   params.qualityControl.backgroundDepletion            = true
+  //   params.qualityControl.backgroundDepletionAligner     = "bowtie2"
+  //   params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
+  //   params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
+  // }
 
   cipher {
 
