chore(dev): refactor taxon evidence; add panviral production draft

--- a/nextflow.config
+++ b/nextflow.config
@@ -28,6 +28,8 @@ params {
   monochrome                          = false
 
   cerebroProduction {
+
+    enabled                           = false
     
     apiToken                          = "CEREBRO_API_TOKEN"
     teamName                          = "CEREBRO_TEAM_NAME"
@@ -182,57 +184,14 @@ params {
 
   panviralEnrichment {            
 
+    taxonomy                          = "$params.databaseDirectory/ictv/taxonomy"  // production only
+
     virusAligner                      = "bowtie2"
     virusIndex                        = "$params.databaseDirectory/ictv/vircov/ictv"
     virusReference                    = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
-    vircovArgs                        = "--remap-exclude-bins 'Homo sapiens' --annotation-preset default"
+    vircovArgs                        = "--remap-exclude-bins 'Homo sapiens'"
 
   }
-
-  // bacterialEnrichment {            
-
-  //   panelAligner                      = "minimap2"
-  //   panelIndex                        = "$params.databaseDirectory/ngono_amr.fasta"
-  //   panelExtraction                   = true  // extract aligned reads from background before further processing
-
-  //   assembly                          = true
-  //   assemblyMethod                    = "shovill-skesa"
-  //   assemblyChecks                    = "checkm2"
-    
-  //   assemblyAnnotation                = true
-  //   assemblyAnnotationMethod          = "bakta"
-    
-  //   assemblyMlst                      = true 
-  //   assemblyMlstMethod                = "mlst"
-
-  //   assemblyAmr                       = true
-  //   assemblyAmrMethod                 = "ng-star abrit-amr"
-  //   assemblyAmrIndex                  = "$params.databaseDirectory/ngono_ngstar.fasta"
-  //   assemblyAmrSpecies                = "Neisseria gonorrhea"
-
-  //   assemblyMgeContig                 = true
-  //   assemblyMgeScan                   = true
-  //   assemblyMgeScanWindow             = 2000
-  //   assemblyMgeMethod                 = "genomad"
-  //   assemblyGenomadDatabase           = "$params.databaseDirectory/genomad_db"
-
-  // }
-
-  // cultureIdentification {
-
-  //   speciesTyping  {
-
-  //     genomeAssembly                  = true  
-  //     hybridAssembly                  = true         
-  //     genomeAssembler                 = "hybracter"  // dragonflye, hybracter, shovill
-
-  //     gtdbtkDatabase                  = "$params.databaseDirectory/gtdb"
-  //     gtdbtkClassify                  = true
-  //     gtdbtkDenovo                    = true
-  //     gtdbtkDenovoOutgroup            = "p__Mycobacteria"
-
-  //   }
-  // }
 
   resources {
     threads {
@@ -307,6 +266,8 @@ profiles {
     params.qualityControl.syntheticControls   = false 
     params.qualityControl.backgroundDepletion = false 
 
+    params.panviralEnrichment.taxonomy         = "$params.databaseDirectory/ictv/taxonomy"
+
     params.panviralEnrichment.virusAligner     = "bowtie2"
     params.panviralEnrichment.virusIndex       = "$params.databaseDirectory/ictv/vircov/ictv"
     params.panviralEnrichment.virusReference   = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
@@ -354,17 +315,6 @@ profiles {
     params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon sylph"
 
   }
-
-  // bg {
-  //   params.cerebroConfig.processQcBackgroundOnly         = true
-  //   params.qualityControl.syntheticControls              = false
-  //   params.qualityControl.internalControls               = false
-  //   params.qualityControl.hostDepletion                  = false
-  //   params.qualityControl.backgroundDepletion            = true
-  //   params.qualityControl.backgroundDepletionAligner     = "bowtie2"
-  //   params.qualityControl.backgroundDepletionIndex       = "$params.databaseDirectory/qc"
-  //   params.qualityControl.backgroundDepletionReference   = "$params.databaseDirectory/qc"
-  // }
 
   cipher {
 
