chore(dev): add ncbi database blast

--- a/nextflow.config
+++ b/nextflow.config
@@ -139,7 +139,7 @@ params {
 
       ncbiDatabase                    = false
       ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
-      ncbiDatabaseMethod              = "blast diamond"
+      ncbiDatabaseMethod              = "blast"
 
       contigProfile                   = false
       contigProfileMethod             = "blast"
