chore(dev): add ncbi database blast

--- a/nextflow.config
+++ b/nextflow.config
@@ -137,8 +137,8 @@ params {
       binningMinContigLength          = 1500    // concoct / semibin2 / metabat2 >= 1500
       binningMinBinSize               = 5000    // concoct / metabat2
 
-      ncbiDatabase                    = false
-      ncbiDatabaseIndex               = "$params.databaseDirectory/nt_nr"
+      ncbiDatabase                    = true
+      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi/nt"  // requires database prefix for BLAST
       ncbiDatabaseMethod              = "blast"
 
       contigProfile                   = false
