chore(dev): add ncbi database blast

--- a/nextflow.config
+++ b/nextflow.config
@@ -138,7 +138,7 @@ params {
       binningMinBinSize               = 5000    // concoct / metabat2
 
       ncbiDatabase                    = true
-      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi/nt"  // requires database prefix for BLAST
+      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi"  // requires database prefix for BLAST
       ncbiDatabaseMethod              = "blast"
 
       contigProfile                   = false
