chore(dev): add ncbi database blast

--- a/nextflow.config
+++ b/nextflow.config
@@ -138,8 +138,9 @@ params {
       binningMinBinSize               = 5000    // concoct / metabat2
 
       ncbiDatabase                    = true
-      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi"  // requires database prefix for BLAST
+      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi" 
       ncbiDatabaseMethod              = "blast"
+      ncbiDatabaseBlastPrefix         = "nt"  // requires database prefix for BLAST
 
       contigProfile                   = false
       contigProfileMethod             = "blast"
@@ -214,6 +215,7 @@ params {
       metaspades            = 8
       megahit               = 8 
       concoct               = 4
+      blast                 = 8
     }
     memory {
       metaspades            = "16 GB"
@@ -225,6 +227,7 @@ params {
       sylph                 = "16 GB"
       bracken               = "16 GB"
       vircov                = "16 GB"
+      blast                 = "16 GB"
     }
 
     conda {
@@ -246,6 +249,7 @@ params {
       semibin2              = "$baseDir/lib/resources/conda/semibin2.yml"
       vircov                = "$baseDir/lib/resources/conda/vircov.yml"
       virscrub              = "$baseDir/lib/resources/conda/virscrub.yml"
+      blast                 = "$baseDir/lib/resources/conda/blast.yml"
     }
   }
 }
@@ -343,6 +347,7 @@ profiles {
     params.resources.memory.sylph                  = "64 GB"
     params.resources.memory.bracken                = "32 GB"
     params.resources.memory.vircov                 = "32 GB"
+    params.resources.memory.blast                  = "128 GB"
 
   }
 
@@ -449,6 +454,7 @@ profiles {
     params.resources.threads.metaspades            = 32
     params.resources.threads.megahit               = 32
     params.resources.threads.concoct               = 8
+    params.resources.threads.blast                 = 32
   }
 
 }
@@ -562,5 +568,10 @@ process {
     withLabel: pathogenAssemblySemiBin2 {  
       cpus = params.resources.threads.semibin2
       conda = params.resources.conda.semibin2
+    }
+    withLabel: pathogenAssemblyBlast {  
+      cpus = params.resources.threads.blast
+      memory = params.resources.memory.blast 
+      conda = params.resources.conda.blast
     }
 }
