--- a/nextflow.config
+++ b/nextflow.config
@@ -137,10 +137,14 @@ params {
       binningMinContigLength          = 1500    // concoct / semibin2 / metabat2 >= 1500
       binningMinBinSize               = 5000    // concoct / metabat2
 
-      ncbiDatabase                    = true
-      ncbiDatabaseIndex               = "$params.databaseDirectory/ncbi" 
-      ncbiDatabaseMethod              = "blast"
-      ncbiDatabaseBlastPrefix         = "nt"  // requires database prefix for BLAST
+      ncbiDatabase                           = true
+      ncbiDatabaseIndex                      = "$params.databaseDirectory/ncbi" 
+      ncbiDatabaseMethod                     = "blast"
+      ncbiDatabaseBlastPrefix                = "nt"  // requires database prefix for BLAST
+      ncbiDatabaseBlastMinPercentIdentity    = 90.0
+      ncbiDatabaseBlastMinEvalue             = "1e-06"
+      ncbiDatabaseBlastMaxTargetSeqs         = 100
+
 
       contigProfile                   = false
       contigProfileMethod             = "blast"
