chore(dev): remove kmcp default profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -96,9 +96,9 @@ params {
       taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
       classifier                      = true
-      classifierMethod                = "kraken2 metabuli ganon kmcp"
+      classifierMethod                = "kraken2 metabuli ganon"
       profiler                        = true
-      profilerMethod                  = "bracken ganon kmcp sylph"
+      profilerMethod                  = "bracken ganon sylph"
 
       metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
       krakenIndex                     = "$params.databaseDirectory/cipher/kraken2"
