chore(dev): refactor panviral production

--- a/nextflow.config
+++ b/nextflow.config
@@ -31,21 +31,17 @@ params {
 
     enabled                           = false
     
-    apiToken                          = "CEREBRO_API_TOKEN"
-    teamName                          = "CEREBRO_TEAM_NAME"
-    towerIdentifier                   = "CEREBRO_TOWER_ID"
+    authConfig  {
+      apiUrl                          = "http://api.cerebro.localhost"
+      tokenEnvironmentVariable        = "CEREBRO_API_TOKEN"
+    }
     
-  }
+    uploadConfig {
+      team                            = "CNS"
+      database                        = "CNS"
+      project                         = "Default"
+    }
 
-  cerebroConfig {
-    
-    qualityControlBackgroundOnly          = false
-    qualityControlDeduplicateBefore       = true
-    qualityControlInternalControlsBefore  = true
-    
-    profileAlignmentSpeciesLca            = true
-    ncbiDatabaseSpeciesLca                = true
-    
   }
 
   qualityControl {    
@@ -121,21 +117,21 @@ params {
 
     }
 
-    metagenomeAssembly {              // low abundance configuration for csf
+    metagenomeAssembly {         
 
-      enabled                         = true
-
-      assemblyMethod                  = "megahit"
-      assemblyArgs                    = ""
-      assemblyKmerList                = "21,29,39,59,79,99,119,127"
-      assemblyMinContigLength         = 200  
-
-      binningMethod                   = "concoct"  // concoct, metabat2, semibin2  
-
-      binningChunkSize                = 10000   // concoct
-      binningReadLength               = 150     // concoct
-      binningMinContigLength          = 1500    // concoct / semibin2 / metabat2 >= 1500
-      binningMinBinSize               = 5000    // concoct / metabat2
+      enabled                                = true
+      
+      assemblyMethod                         = "megahit"
+      assemblyArgs                           = ""
+      assemblyKmerList                       = "21,29,39,59,79,99,119,127"
+      assemblyMinContigLength                = 200  
+      
+      binningMethod                          = "concoct"  // concoct, metabat2, semibin2  
+      
+      binningChunkSize                       = 10000   // concoct
+      binningReadLength                      = 150     // concoct
+      binningMinContigLength                 = 1500    // concoct / semibin2 / metabat2 >= 1500
+      binningMinBinSize                      = 5000    // concoct / metabat2
 
       ncbiDatabase                           = true
       ncbiDatabaseIndex                      = "$params.databaseDirectory/ncbi" 
@@ -146,27 +142,27 @@ params {
       ncbiDatabaseBlastMaxTargetSeqs         = 100
 
 
-      contigProfile                   = false
-      contigProfileMethod             = "blast"
-      contigProfileIndex              = "$params.databaseDirectory/virus.db"
-
-      virusDetection                  = false
-      virusDetectionMethod            = "genomad"
-      virusDetectionMinContigLength   = 2000
-      virusDetectionIndex             = "$params.databaseDirectory/genomad_db"
-
-      virusContigPolish               = false
-      virusContigPolishMethod         = "cobra"
-
-      virusProfile                    = false
-      virusProfileMethod              = "minimap2"
-      virusProfileIndex               = "$params.databaseDirectory/img_vr.fasta.xz"
-      virusProfileReference           = "$params.databaseDirectory/img_vr.fasta.xz"
-
-      rdrpDetection                   = false
-      rdrpDetectionMethod             = "rdrp-scan"
-      rdrpLibraryTag                  = "RNA"
-      rdrpDetectionIndex              = "$params.databaseDirectory/rdrp_db"
+      contigProfile                          = false
+      contigProfileMethod                    = "blast"
+      contigProfileIndex                     = "$params.databaseDirectory/virus.db"
+      
+      virusDetection                         = false
+      virusDetectionMethod                   = "genomad"
+      virusDetectionMinContigLength          = 2000
+      virusDetectionIndex                    = "$params.databaseDirectory/genomad_db"
+      
+      virusContigPolish                      = false
+      virusContigPolishMethod                = "cobra"
+      
+      virusProfile                           = false
+      virusProfileMethod                     = "minimap2"
+      virusProfileIndex                      = "$params.databaseDirectory/img_vr.fasta.xz"
+      virusProfileReference                  = "$params.databaseDirectory/img_vr.fasta.xz"
+      
+      rdrpDetection                          = false
+      rdrpDetectionMethod                    = "rdrp-scan"
+      rdrpLibraryTag                         = "RNA"
+      rdrpDetectionIndex                     = "$params.databaseDirectory/rdrp_db"
 
     }
 
