chore(dev): enable ictv alignment for pathogen detection; integrate with pathogen detection record

--- a/nextflow.config
+++ b/nextflow.config
@@ -136,10 +136,10 @@ params {
       ncbiDatabase                           = true
       ncbiDatabaseIndex                      = "$params.databaseDirectory/ncbi" 
       ncbiDatabaseMethod                     = "blast"
-      ncbiDatabaseBlastPrefix                = "nt"  // requires database prefix for BLAST
-      ncbiDatabaseBlastMinPercentIdentity    = 90.0
-      ncbiDatabaseBlastMinEvalue             = "1e-06"
-      ncbiDatabaseBlastMaxTargetSeqs         = 100
+      ncbiDatabaseBlastPrefix                = "nt"         // requires database prefix for BLAST
+      ncbiDatabaseBlastMinPercentIdentity    = 95.0         // target are known sequences
+      ncbiDatabaseBlastMinEvalue             = "1e-10"      // stringent homolog search
+      ncbiDatabaseBlastMaxTargetSeqs         = 5
 
 
       contigProfile                          = false
@@ -324,10 +324,10 @@ profiles {
 
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
 
-    params.pathogenDetection.taxonomicProfile.alignment                       = false
+    params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
-    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher/ictv"
-    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/cipher/ictv.fasta"
+    params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/cipher/vircov/ictv"
+    params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/cipher/vircov/ictv.fasta"
     params.pathogenDetection.taxonomicProfile.vircovArgs                      = "--remap-exclude-bins 'Homo sapiens'"
 
     params.pathogenDetection.taxonomicProfile.metabuliIndex                   = "$params.databaseDirectory/cipher/metabuli"
@@ -354,7 +354,7 @@ profiles {
   ictv {
     
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/ictv/taxonomy"
-
+    
     params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
     params.pathogenDetection.taxonomicProfile.alignmentIndex                  = "$params.databaseDirectory/ictv/vircov/ictv"
