chore(dev): debug mag params

--- a/nextflow.config
+++ b/nextflow.config
@@ -80,7 +80,7 @@ params {
 
     taxonomicProfile {
 
-      enabled                         = true
+      enabled                         = false
 
       alignment                       = false
       alignmentMethod                 = "bowtie2"
@@ -195,6 +195,7 @@ params {
   }
 
   resources {
+
     threads {
       fastp                 = 8
       nanoq                 = 1
