chore(dev): debug mag params

--- a/nextflow.config
+++ b/nextflow.config
@@ -80,7 +80,7 @@ params {
 
     taxonomicProfile {
 
-      enabled                         = false
+      enabled                         = true
 
       alignment                       = false
       alignmentMethod                 = "bowtie2"
