chore(dev): refactor contig profile from ncbi

--- a/nextflow.config
+++ b/nextflow.config
@@ -128,23 +128,26 @@ params {
       
       binningMethod                          = "concoct"  // concoct, metabat2, semibin2  
       
-      binningChunkSize                       = 10000   // concoct
-      binningReadLength                      = 150     // concoct
-      binningMinContigLength                 = 1500    // concoct / semibin2 / metabat2 >= 1500
-      binningMinBinSize                      = 5000    // concoct / metabat2
+      binningChunkSize                       = 10000      // concoct
+      binningReadLength                      = 150        // concoct
+      binningMinContigLength                 = 1500       // concoct / semibin2 / metabat2 >= 1500
+      binningMinBinSize                      = 5000       // concoct / metabat2
 
-      ncbiDatabase                           = true
+      contigProfile                          = true
+      contigProfileMethod                    = "blast"
+      contigProfileIndex                     = "$params.databaseDirectory/cipher/blast" 
+      contigProfileBlastPrefix               = "cipher"   // requires database prefix for BLAST
+      contigProfileBlastMinPercentIdentity   = 90.0       // target are known sequences
+      contigProfileBlastMinEvalue            = "1e-10"    // stringent homolog search
+      contigProfileBlastMaxTargetSeqs        = 5
+
+      ncbiDatabase                           = false
       ncbiDatabaseIndex                      = "$params.databaseDirectory/ncbi" 
       ncbiDatabaseMethod                     = "blast"
-      ncbiDatabaseBlastPrefix                = "nt"         // requires database prefix for BLAST
-      ncbiDatabaseBlastMinPercentIdentity    = 90.0         // target are known sequences
-      ncbiDatabaseBlastMinEvalue             = "1e-10"      // stringent homolog search
+      ncbiDatabaseBlastPrefix                = "nt"       // requires database prefix for BLAST
+      ncbiDatabaseBlastMinPercentIdentity    = 90.0       // target are known sequences
+      ncbiDatabaseBlastMinEvalue             = "1e-10"    // stringent homolog search
       ncbiDatabaseBlastMaxTargetSeqs         = 5
-
-
-      contigProfile                          = false
-      contigProfileMethod                    = "blast"
-      contigProfileIndex                     = "$params.databaseDirectory/virus.db"
       
       virusDetection                         = false
       virusDetectionMethod                   = "genomad"
