chore(dev): restructure database model; add ntc filter draft - not working

--- a/nextflow.config
+++ b/nextflow.config
@@ -133,16 +133,8 @@ params {
       contigProfileIndex                     = "$params.databaseDirectory/cipher/blast" 
       contigProfileBlastPrefix               = "cipher"   // requires database prefix for BLAST
       contigProfileBlastMinPercentIdentity   = 90.0       // target are known sequences
-      contigProfileBlastMinEvalue            = "1e-10"    // stringent homolog search
+      contigProfileBlastMinEvalue            = "1e-08"    // stringent homolog search
       contigProfileBlastMaxTargetSeqs        = 5
-
-      ncbiDatabase                           = false
-      ncbiDatabaseIndex                      = "$params.databaseDirectory/ncbi" 
-      ncbiDatabaseMethod                     = "blast"
-      ncbiDatabaseBlastPrefix                = "nt"       // requires database prefix for BLAST
-      ncbiDatabaseBlastMinPercentIdentity    = 90.0       // target are known sequences
-      ncbiDatabaseBlastMinEvalue             = "1e-10"    // stringent homolog search
-      ncbiDatabaseBlastMaxTargetSeqs         = 5
       
       virusDetection                         = false
       virusDetectionMethod                   = "genomad"
@@ -166,7 +158,7 @@ params {
 
     hostGenome {
 
-      aneuploidyDetection            = true
+      aneuploidyDetection            = false
       aneuploidyReferenceMethod      = "cnvkit"
       aneuploidyLibraryTag           = "DNA HOST"
 
@@ -174,7 +166,7 @@ params {
       aneuploidyIndex                = "$params.databaseDirectory/chm13v2.mmi"
       aneuploidyReferenceAlignment   = "$params.databaseDirectory/aneuploidy.bam"
 
-      signatureBacterialViral        = true
+      signatureBacterialViral        = false
       signatureLibraryTag            = "RNA HOST"
       signatureReferences            = "two_gene_signature.fasta"
       
