chore(dev): frontend mods; add db project crud draft; modify ntc comparison

--- a/nextflow.config
+++ b/nextflow.config
@@ -132,7 +132,7 @@ params {
       contigProfileMethod                    = "blast"
       contigProfileIndex                     = "$params.databaseDirectory/cipher/blast" 
       contigProfileBlastPrefix               = "cipher"   // requires database prefix for BLAST
-      contigProfileBlastMinPercentIdentity   = 90.0       // target are known sequences
+      contigProfileBlastMinPercentIdentity   = 90.0       // stringent homolog search
       contigProfileBlastMinEvalue            = "1e-08"    // stringent homolog search
       contigProfileBlastMaxTargetSeqs        = 5
       
