chore(dev): fix ntc ratio; table data frontend

--- a/nextflow.config
+++ b/nextflow.config
@@ -132,8 +132,8 @@ params {
       contigProfileMethod                    = "blast"
       contigProfileIndex                     = "$params.databaseDirectory/cipher/blast" 
       contigProfileBlastPrefix               = "cipher"   // requires database prefix for BLAST
-      contigProfileBlastMinPercentIdentity   = 90.0       // stringent homolog search
-      contigProfileBlastMinEvalue            = "1e-08"    // stringent homolog search
+      contigProfileBlastMinPercentIdentity   = 80.0       // relaxed homolog search
+      contigProfileBlastMinEvalue            = "1e-06"    // relaxed homolog search
       contigProfileBlastMaxTargetSeqs        = 5
       
       virusDetection                         = false
@@ -301,7 +301,6 @@ profiles {
     params.pathogenDetection.taxonomicProfile.alignmentReference              = "$params.databaseDirectory/gtdb/gtdb.fasta"
     params.pathogenDetection.taxonomicProfile.alignmentSecondary              = false
 
-    
     params.pathogenDetection.taxonomicProfile.classifier                      = true
     params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
     params.pathogenDetection.taxonomicProfile.profiler                        = true
@@ -309,9 +308,30 @@ profiles {
 
   }
 
+  legacy {
+
+    params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/legacy/taxonomy"
+    params.pathogenDetection.taxonomicProfile.krakenIndex                     = "$params.databaseDirectory/legacy/langmead_pfp_64GB"
+
+    params.pathogenDetection.taxonomicProfile.alignment                       = false
+
+    params.pathogenDetection.taxonomicProfile.classifier                      = true
+    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2"
+    params.pathogenDetection.taxonomicProfile.profiler                        = true
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken"
+
+    params.pathogenDetection.metagenomeAssembly.contigProfileIndex            = "$params.databaseDirectory/legacy/ncbi" 
+    params.pathogenDetection.metagenomeAssembly.contigProfileBlastPrefix      = "nt"
+
+  }
   cipher {
 
     params.pathogenDetection.taxonomicProfile.taxonomy                        = "$params.databaseDirectory/cipher/taxonomy"
+
+    params.pathogenDetection.taxonomicProfile.classifier                      = true
+    params.pathogenDetection.taxonomicProfile.classifierMethod                = "kraken2 metabuli ganon"
+    params.pathogenDetection.taxonomicProfile.profiler                        = true
+    params.pathogenDetection.taxonomicProfile.profilerMethod                  = "bracken ganon sylph"
 
     params.pathogenDetection.taxonomicProfile.alignment                       = true
     params.pathogenDetection.taxonomicProfile.alignmentMethod                 = "bowtie2"
@@ -327,8 +347,8 @@ profiles {
     params.pathogenDetection.taxonomicProfile.sylphIndex                      = "$params.databaseDirectory/cipher/sylph/cipher.syldb"
     params.pathogenDetection.taxonomicProfile.sylphMetadata                   = "$params.databaseDirectory/cipher/sylph/metadata.tsv.gz"
 
-    params.resources.memory.metaspades             = "256 GB"
-    params.resources.memory.megahit                = "256 GB"
+    params.resources.memory.metaspades             = "64 GB"
+    params.resources.memory.megahit                = "64 GB"
     params.resources.memory.metabuli               = "64 GB"
     params.resources.memory.kraken2                = "768 GB"
     params.resources.memory.kmcp                   = "256 GB"
