--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,6 @@
   "devDependencies": {
     "@carbon/charts-svelte": "^1.12.0",
     "@floating-ui/dom": "1.5.1",
-    "@vincjo/datatables": "1.14.10",
     "@skeletonlabs/skeleton": "2.10",
     "@skeletonlabs/tw-plugin": "^0.2.1",
     "@sveltejs/adapter-auto": "^2.0.0",
@@ -25,6 +24,7 @@
     "@types/node": "20.5.6",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
     "@typescript-eslint/parser": "^5.45.0",
+    "@vincjo/datatables": "1.14.10",
     "autoprefixer": "10.4.15",
     "d3": "^7.8.5",
     "d3-cloud": "^1.2.7",
@@ -46,5 +46,10 @@
     "vite": "^4.5.4",
     "vite-plugin-tailwind-purgecss": "0.1.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@myriaddreamin/typst-ts-renderer": "^0.5.1",
+    "@myriaddreamin/typst-ts-web-compiler": "^0.5.1",
+    "@myriaddreamin/typst.ts": "^0.5.1"
+  }
 }
