--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Testing
 testing/
 .nextflow/
+templates/report/report.pdf
 
 # Triggered dev builds
 trigger
@@ -195,3 +196,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
