--- a/cerebro/stack/report-wasm/Cargo.toml
+++ b/cerebro/stack/report-wasm/Cargo.toml
@@ -19,17 +19,31 @@ include = [
 [lib]
 crate-type = ["cdylib"]
 
+[[bin]]
+name = "cerebro-report"
+path = "src/main.rs"
+
 [dependencies]
 chrono = "0.4.39"
 getrandom = { version = "0.2.15", features = ["js"] }
 js-sys = "0.3.76"
 parking_lot = "0.12.3"
-send_wrapper = "0.6.0"
 serde = { version = "1.0.217", features = ["derive"] }
-serde-wasm-bindgen = "0.6.5"
-tera = "1.20.0"
+serde_json = "1.0.134"
+tera = { version = "1", default-features = false }
 typst = "0.12.0"
 typst-assets = { version = "0.12.0", features = ["fonts"] }
 typst-pdf = "0.12.0"
 typst-svg = "0.12.0"
 wasm-bindgen = "0.2.99"
+serde-wasm-bindgen = "0.6.5"
+
+# CLI feature
+clap = { version = "4", optional = true, features = ["derive", "env", "unstable-styles", "wrap_help"] }
+anstyle = { version = "1", optional = true }
+anyhow = { version = "1", optional = true }
+
+
+[features]
+default = []
+cli = ["clap", "anstyle", "anyhow"]
