--- a/cerebro/stack/report-wasm/Cargo.toml
+++ b/cerebro/stack/report-wasm/Cargo.toml
@@ -24,6 +24,7 @@ name = "cerebro-report"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1"
 chrono = "0.4.39"
 getrandom = { version = "0.2.15", features = ["js"] }
 js-sys = "0.3.76"
@@ -41,9 +42,8 @@ serde-wasm-bindgen = "0.6.5"
 # CLI feature
 clap = { version = "4", optional = true, features = ["derive", "env", "unstable-styles", "wrap_help"] }
 anstyle = { version = "1", optional = true }
-anyhow = { version = "1", optional = true }
 
 
 [features]
 default = []
-cli = ["clap", "anstyle", "anyhow"]
+cli = ["clap", "anstyle"]
