--- a/cerebro/stack/report-wasm/Cargo.toml
+++ b/cerebro/stack/report-wasm/Cargo.toml
@@ -39,11 +39,13 @@ typst-svg = "0.12.0"
 wasm-bindgen = "0.2.99"
 serde-wasm-bindgen = "0.6.5"
 
-# CLI feature
+# Command-line interface feature
 clap = { version = "4", optional = true, features = ["derive", "env", "unstable-styles", "wrap_help"] }
 anstyle = { version = "1", optional = true }
+toml = { version = "0.8.20", optional = true}
+uuid = { version = "1.13.1", features = ["v4"] }
 
 
 [features]
 default = []
-cli = ["clap", "anstyle"]
+cli = ["clap", "anstyle", "toml"]
