chore(dev): add cerebro config

--- a/nextflow.config
+++ b/nextflow.config
@@ -474,7 +474,7 @@ process {
 
     withLabel: cerebro { 
       cpus = params.resources.threads.cerebro 
-      // conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro // dev version
     }
     withLabel: panviralVirusRecovery { 
       cpus = params.resources.threads.vircov 
@@ -487,11 +487,11 @@ process {
     }
     withLabel: qualityReadScan { 
       cpus = params.resources.threads.cerebro 
-      // conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro // dev version
     }
     withLabel: qualityDeduplication { 
       cpus = params.resources.threads.cerebro 
-      // conda = params.resources.conda.cerebro // dev version
+      conda = params.resources.conda.cerebro // dev version
     }
     withLabel: qualityReadQualityFastp { 
       cpus = params.resources.threads.fastp 
