chore(dev): fix appendix reporting; fix ictv db location for panviral

--- a/nextflow.config
+++ b/nextflow.config
@@ -175,11 +175,11 @@ params {
 
   panviralEnrichment {            
 
-    taxonomy                          = "$params.databaseDirectory/ictv/taxonomy"  // production only
+    taxonomy                          = "$params.databaseDirectory/taxonomy"  // production only
 
     virusAligner                      = "bowtie2"
-    virusIndex                        = "$params.databaseDirectory/ictv/vircov/ictv"
-    virusReference                    = "$params.databaseDirectory/ictv/vircov/ictv.fasta"
+    virusIndex                        = "$params.databaseDirectory/ictv"
+    virusReference                    = "$params.databaseDirectory/ictv.fasta"
     vircovArgs                        = "--remap-exclude-bins 'Homo sapiens'"
 
   }
