chore(dev): add draft well plate viz; add pipeline output options for fs; fix nextflow definitions for vircov references; fix table data logic for samples

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,8 +35,14 @@ params {
       apiUrl                          = "http://api.cerebro.localhost"
       tokenEnvironmentVariable        = "CEREBRO_API_TOKEN"
     }
+
+    fsConfig {
+      enabled                         = true
+      team                            = "CNS"
+    }
     
     uploadConfig {
+      enabled                         = true
       team                            = "CNS"
       database                        = "CNS"
       project                         = "Default"
@@ -256,9 +262,9 @@ profiles {
   }
 
   panviral {
-    params.qualityControl.readDeduplication   = false  
-    params.qualityControl.internalControls    = false 
-    params.qualityControl.backgroundDepletion = false 
+    params.qualityControl.readDeduplication    = false  
+    params.qualityControl.internalControls     = false 
+    params.qualityControl.backgroundDepletion  = false 
 
     params.panviralEnrichment.taxonomy         = "$params.databaseDirectory/ictv/taxonomy"
 
