--- a/cerebro/stack/report-wasm/Cargo.toml
+++ b/cerebro/stack/report-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "cerebro-report-wasm"
-version = "0.1.0"
+name = "cerebro-report"
+version = "0.11.0"
 authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
 description = "Cerebro: reporting module for compiling PDF reports with WebAssembly"
 documentation = "https://github.com/esteinig/cerebro"
