chore(dev): gpt refinement; taxon history checks; taxstr ignore; adjust note commands ref plate

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@ testing/
 .nextflow/
 templates/report/report.pdf
 cerebro/stack/report-wasm/tests/
-
+cerebro/stack/ciqa/templates/test*/
+cerebro/stack/gp/templates/test*/
 # Triggered dev builds
 trigger
 
