--- a/cerebro/stack/ciqa/Cargo.toml
+++ b/cerebro/stack/ciqa/Cargo.toml
@@ -58,3 +58,4 @@ reqwest = { version = "0.12.2", features = ["blocking", "json"] }
 plotters = "0.3.7"
 plotters-bitmap = "0.3.7"
 tokio = "1.44.1"
+taxonomy = "0.10.0"
