--- a/cerebro/stack/gp/Cargo.toml
+++ b/cerebro/stack/gp/Cargo.toml
@@ -58,3 +58,5 @@ reqwest = { version = "0.12.2", features = ["blocking", "json"] }
 async-openai = "0.28.0"
 petgraph = "0.7.1"
 tokio = { version = "1.44.1", features = ["process", "rt-multi-thread"] }
+anthropic-api = "0.0.5"
+serde_plain = "1.0.2"
